2004-05-23  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* improved detection of grounded wires and labeled wires
	* add component ampere_ac

2004-05-22  Stefan Jahn  <stefan@lkcc.org>

	* qucsdoc.cpp (selectElements): Rearranged the code for
	re-ordering the select area rectangle coordinates.  Seemed
	to be a compiler bug or something.

2004-05-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* double-click on label opens the label name edit dialog
	* fixed bug in marker text
	* fixed bug in diagram calculation

2004-05-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed many small bugs in the view area handling
	* filled rectangle and filled ellipse as paintings

2004-05-19  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/tabdiagram.cpp (calcDiagram): Yet another bug fix
	causing segfaulting the tabdiagram when an graph input has
	disappered after a new simulation.

2004-05-19  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/rectdiagram.cpp (calcDiagram): Fixed an endless
	loop bug when trying to calculate grid properties for zero
	ymax and ymin.

	* qucsfile.cpp (simpleInsertWire): Fixed segfault bug when
	accessing null pointer.

	* qucsview.cpp (MPressRotate): Fixed possible cause of
	segfault.
	(MReleasePaste): Fixed segfault reason when the re-inserted wire
	gets deleted.

	* qucsdoc.cpp (insertWire): Run oneLabel() only if the wire has
	not been deleted in this function.  Fixes segfault of GUI.
	(deleteWire): Fixed apparent typo which lead to segfault.

2004-05-15  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/diagram.cpp (loadIndepVarData): Fixed typo
	in error message.

	* qucs_de.ts: Updated german translation.

	* qucs.cpp (QucsApp): Fixed Qucs file filter description.

2004-05-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* markers show more-dimensional data correct
	* cursor up/down key moves selected markers
	* outsourced toggle actions into class "QucsActions"