@@ -21,6 +21,6 @@ Maintainer:
 	Michael Margraf <margraf@mwt.ee.tu-berlin.de>
 
 Authors: (see THANKS file for details)
-	Michael Margraf <margraf@mwt.ee.tu-berlin.de>
+	Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 	Stefan Jahn <jahn@mwt.ee.tu-berlin.de>
 	Jens Flucke <jens.flucke@gmx.de>
